--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "author": "MN Raza",
   "type": "module",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js"
