--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
 VITE_API_BASE_URL=http://localhost:8080
+
+
+VITE_RAZORPAY_KEY_ID=rzp_test_ekFZBKNAkIMeYX
+VITE_RAZORPAY_SECRET_KEY=BJtPO3AjhBYol5l7IKSwqgqZ
