--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.6.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "typescript": "^5.8.3"
   }
 }
